// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run query "Search media" with: { "searchText": "search text" } 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": false,
    "pageFetchLimitReached": false,
    "pageNumber": 1,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 1,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Run query "Search media" with: { "searchText": "search text" } 2`] = `
{
  "media": [
    {
      "files": [],
      "id": "2-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": true,
    "pageFetchLimitReached": false,
    "pageNumber": 2,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 2,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Run query "Search media" with: { "searchText": "search text" } 3`] = `null`;

exports[`Run query "Single media" with: { "id": "test-getWebpage" } 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1234",
      "mediaFinderSource": "example-source",
      "title": "Example Domain",
    },
  ],
  "request": {
    "id": "test-getWebpage",
    "queryType": "single-media",
    "source": "example-source",
  },
}
`;
